--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-webcam": "^7.2.0",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "vite": "^5.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.7.0",
